# resumeSite

./: db.sqlite3  pyproject.toml
ResumeApp/: apps.py  forms.py  models.py  urls.py  views.py
ResumeApp/migrations/: 0001_initial.py
ResumeApp/templates/ResumeApp/: base.html  index.html
ResumeApp/templates/ResumeApp/partials/: nav.html
resumesite/: context_processors.py  settings.py  urls.py
