[tool.poetry]
name = "resumesite"
version = "0.1.0"
description = ""
authors = ["reginaldmj <reginald.jeffersonm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
Pillow = "^10.1.0"
django-ckeditor = "^6.7.0"

[tool.poetry.dev-dependencies]
Django = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
